// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SomeOtherPage renders correctly 1`] = `
<div>
  <h1>
    This is some other page
  </h1>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</div>
`;

exports[`SomePage renders correctly 1`] = `
<div>
  <h1>
    This is some page
  </h1>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="pagesWrapper"
>
  <div
    className="pagesContent"
  >
    <h3>
      List of pages
    </h3>
    <div
      className="listWrapper"
    >
      <ul>
        <li>
          <Link
            to="/topics"
          >
            topics
          </Link>
        </li>
        <li>
          <Link
            to="/archives"
          >
            archives
          </Link>
        </li>
        <li>
          <Link
            to="/pages"
          >
            pages
          </Link>
        </li>
        <li>
          <Link
            to="/somepage"
          >
            somepage
          </Link>
        </li>
        <li>
          <Link
            to="/someotherpage"
          >
            someotherpage
          </Link>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
